--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ if (!window.SharedArrayBuffer) {
 	setTimeout(() => document.getElementById('status').style.display = '', 1500);
 }
 </script>
-<script src="coi-serviceworker.min.js"></script>
+<script src="coi-serviceworker.js"></script>
 <script src="coi-serviceworker.min.js"></script>
 	</head>
 	<body>
