--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0">
-		<title>Ferrum Project</title>
+		<title>El Taller de Don Ferrum - Prototipo</title>
 		<style>
 html, body, #canvas {
 	margin: 0;
@@ -78,14 +78,7 @@ body {
 		</style>
 		<link id="-gd-engine-icon" rel="icon" type="image/png" href="index.icon.png" />
 <link rel="apple-touch-icon" href="index.apple-touch-icon.png"/>
-<script>
-if (!window.SharedArrayBuffer) {
-	document.getElementById('status').style.display = 'none';
-	setTimeout(() => document.getElementById('status').style.display = '', 1500);
-}
-</script>
 <script src="coi-serviceworker.js"></script>
-<script src="coi-serviceworker.min.js"></script>
 	</head>
 	<body>
 		<canvas id="canvas">
@@ -104,7 +97,7 @@ if (!window.SharedArrayBuffer) {
 
 		<script src="index.js"></script>
 		<script>
-const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":81382736,"index.wasm":43016933},"focusCanvas":true,"gdextensionLibs":[]};
+const GODOT_CONFIG = {"args":[],"canvasResizePolicy":2,"ensureCrossOriginIsolationHeaders":true,"executable":"index","experimentalVK":false,"fileSizes":{"index.pck":81374960,"index.wasm":43016933},"focusCanvas":true,"gdextensionLibs":[]};
 const GODOT_THREADS_ENABLED = false;
 const engine = new Engine(GODOT_CONFIG);
 
